Criação de componentes, estilo global e read-me

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
