--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,11 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/utils/scss"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
