--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "clean-start": "rm -rf node_modules/ && npm install && clear && npm run start",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
